# obsidian-selfsync

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  docker-compose.e2e.yml  manifest.json  run.ps1  versions.json
.engine/: README.md  deliverable-manifest.txt
.engine/contracts/: reverify.toml
.engine/decisions/: 0001-adopt-engine.sysml  0002-release-versioning-process.sysml  0003-realign-engine-with-keel-binary.sysml  0004-adopt-keel-for-product-and-backfill.sysml  0005-no-couchdb-custom-rust-server.sysml  0006-unpaywalled-three-way-merge.sysml  0007-trusted-server-security-model.sysml  0008-vault-sharing-design.sysml  0009-decline-e2ee-keep-trusted-server.sysml  0010-b9-journal-now-defer-streaming.sysml  0011-requirement-test-traceability.sysml  0012-release-verify-guard.sysml  0013-config-auto-remove-and-live-detect.sysml  (+21 more)
.githooks/: pre-commit
.github/workflows/: ci.yml  (+3 more)
.tracking/: README.md  actors.sysml  indicators.sysml  issues.sysml
client/: .gitignore  esbuild.config.mjs  manifest.json  package.json  playwright.config.ts  playwright.obsidian.config.ts  styles.css  tsconfig.json  vitest.config.ts  vitest.perf.config.ts
deploy/: .env.example  Caddyfile  docker-compose.noproxy.yml  docker-compose.yml
docs/: cmmc-posture.md  deployment.md  testing.md  verification-checklist.md
scripts/: bump-version.mjs  check-release-currency.mjs  check-release.mjs  e2e.ps1  e2e.sh
server/: Cargo.toml  Dockerfile
server/src/: admin.rs  admin_ui.html  admin_ui.rs  admins.rs  api.rs  atomicfile.rs  audit.rs  auth.rs  chunker.rs  chunkstore.rs  config.rs  error.rs  hash.rs  index_store.rs  lib.rs  main.rs  mfa.rs  protocol.rs  registration.rs  sharelinks.rs  shares.rs  state.rs  throttle.rs  tokens.rs  totp.rs  users.rs  vault.rs  vaults.rs  ws.rs
server/tests/: admin.rs  hardening.rs  registration.rs  sharing.rs  sync.rs  ws.rs
(+147 files in other folders)
