[package]
name = "new-livesync-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "new_livesync_server"
path = "src/lib.rs"

[[bin]]
name = "new-livesync-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
sha2 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
# Embedded SQLite (bundled = compiled in, no system dep) — the per-vault index store (D0018).
rusqlite = { version = "0.32", features = ["bundled"] }
# Leveled logging via the `log` façade; env_logger reads the LOG_LEVEL env var (set in compose) so
# the report level is runtime-configurable. Levels are real (error/warn/info/debug), not baked into
# message strings.
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
tempfile = "3"
